--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "stylelint": "^16.16.0",
     "stylelint-config-standard": "^37.0.0",
     "tailwindcss": "^4.0.15",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.27.0",
+    "pg-promise": "^10.12.1"
   },
   "devDependencies": {
     "@types/node": "22.13.13",
