--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "express": "^4.18.2"
     "autoprefixer": "^10.4.21",
     "browser-image-compression": "^2.0.2",
     "compressorjs": "^1.2.1",
