--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^19.0.12",
+    "@types/node": "^18.17.0",
     "eslint": "^9.0.0",
     "eslint-plugin-react": "^7.33.2"
   }
