--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
     "@types/react": "^19.0.12",
     "@types/node": "^18.17.0",
+    "@types/styled-components": "^6.1.1",
     "eslint": "^9.0.0",
     "eslint-plugin-react": "^7.33.2"
   }
