--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "express": "^4.18.2",
-    "styled-components": "^6.1.16"
+    "@types/styled-components": "^5.1.34"
+
   },
   "devDependencies": {
     "typescript": "^5.3.3",
