--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "express": "^4.18.2",
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "@google/generative-ai": "^0.5.2"
 
   },
   "devDependencies": {
@@ -24,7 +25,7 @@
     "@types/react": "^19.0.12",
     "@types/node": "^18.17.0",
     "@types/styled-components": "^5.1.34",
-    "eslint": "^9.0.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2"
   }
 }
