--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
-    "next": "^15.2.3",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "express": "^4.18.2",
-    "@types/styled-components": "^5.1.34",
-    "@google/generative-ai": "^0.5.2"
-
+    "@google/generative-ai": "^0.5.1",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/react": "^19.0.12",
-    "@types/node": "^18.17.0",
-    "@types/styled-components": "^5.1.34",
+    "typescript": "^5.4.5",
+    "@types/react": "^18.2.67",
+    "@types/node": "^20.11.21",
+    "@types/styled-components": "^6.1.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2"
   }
