--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
-    "next": "^14.1.0",
+    "next": "^15.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "express": "^4.18.2",
-    "@google/generative-ai": "^0.24.0",
-    "styled-components": "^5.1.34"
+    "@google/generative-ai": "^0.4.1",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "@types/react": "^18.2.67",
-    "@types/node": "^20.11.21",
+    "typescript": "^5.3.3",
+    "@types/react": "^19.0.12",
+    "@types/node": "^18.17.0",
     "@types/styled-components": "^5.1.34",
     "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1"
   }
 }
