--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "express": "^4.18.2",
-    "@google/generative-ai": "^0.5.2",
-    "@types/styled-components": "^5.1.34"
+    "@google/generative-ai": "^0.4.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
-    "@types/react": "^19.0.12",
+    "@types/react": "^18.2.0",
     "@types/node": "^18.17.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "@typescript-eslint/eslint-plugin": "^8.27.0",
-    "@typescript-eslint/parser": "^8.27.0"
+    "eslint-plugin-react": "^7.33.2"
   }
 }
