--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "express": "^4.18.2",
-    "@google/generative-ai": "^0.4.0"
+    "styled-components": "^6.1.2",
+    "@google/generative-ai": "^0.5.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
-    "@types/react": "^18.2.0",
+    "@types/react": "^19.0.12",
     "@types/node": "^18.17.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2"
   }
