--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "6.1.2",
+    "styled-components": "^5.3.11",
     "@google/generative-ai": "^0.24.0"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "@types/node": "18.19.1",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
+    "@types/styled-components": "^5.1.26"
     "eslint": "8.55.0",
     "eslint-plugin-react": "7.33.2"
   },
