--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "18.19.1",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.55.0",
     "eslint-plugin-react": "7.33.2"
   },
