--- a/netlify.toml
+++ b/netlify.toml
@@ -1,27 +1,23 @@
 [build]
   command = "npm run build"
   publish = ".next"
-  functions = "netlify/functions"
-
-[build.environment]
-  NODE_VERSION = "18.20.7"
-  NPM_VERSION = "10.8.2"
-
-[dev]
-  framework = "next"
-  command = "npm run dev"
-  targetPort = 3000
-  port = 8888
+  environment = { GO_VERSION = "1.19", NODE_VERSION = "18" }
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
+[build.processing]
+  skip_processing = false
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+  GO_VERSION = "1.19"
+
+[functions]
+  directory = "netlify/functions"
+
+[dev]
+  command = "npm run dev"
+  framework = "next"
+  targetPort = 3000
