--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,11 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  GO_VERSION = "1.21"  # Change Go version to a supported one
 
 [context.production.environment]
   NODE_VERSION = "18"
+  GO_VERSION = "1.21"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
