--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "styled-components": "^5.3.11",
     "@google/generative-ai": "^0.24.0"
   },
