--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@types/styled-components": "^5.1.26",
-    "eslint-config-next": "^14.1.4"
+    "eslint-config-next": "^14.1.4",
     "eslint": "8.55.0",
     "eslint-plugin-react": "7.33.2"
   },
