--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,8 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  GO_VERSION = "1.19"
 
 [context.production.environment]
   NODE_VERSION = "18"
-
-[context.deploy-preview.environment]
-  NODE_VERSION = "18"
+  GO_VERSION = "1.19"
