--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
   command = "npm install && npm run build"
   publish = ".next"
+  environment = { NODE_VERSION = "18" }
 
 [build.environment]
   NODE_VERSION = "18"
-  GO_VERSION = "1.19"
+  NPM_FLAGS = "--legacy-peer-deps"
 
-[context.production.environment]
-  NODE_VERSION = "18"
-  GO_VERSION = "1.19"
+[[plugins]]
+  package = "@netlify/plugin-cache"
