--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@types/styled-components": "^5.1.26",
-    "eslint-config-next": "^14.1.4",
     "eslint": "8.55.0",
-    "eslint-plugin-react": "7.33.2"
+    "eslint-plugin-react": "7.33.2",
+    "eslint-config-next": "14.1.4"
   },
   "overrides": {
     "react": "18.2.0",
