--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "toolsfree-online",
   "version": "1.0.0",
-  "description": "A comprehensive online tools website with 30+ free tools",
-  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "postinstall": "npm run build"
-  },
-  "engines": {
-    "node": "18.x"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.1.4",
@@ -18,17 +12,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "styled-components": "^5.3.11",
-    "@google/generative-ai": "^0.24.0"
+    "@google/generative-ai": "^0.24.0",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
-    "typescript": "5.3.3",
-    "@types/react": "18.2.55",
-    "@types/node": "18.19.1",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
-    "@types/styled-components": "^5.1.26",
-    "eslint": "8.55.0",
-    "eslint-plugin-react": "7.33.2",
+    "eslint": "8.56.0",
+    "eslint-plugin-react": "7.34.0",
     "eslint-config-next": "14.1.4"
   },
   "overrides": {
