--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "toolsfree-online",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,18 +11,16 @@
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "styled-components": "^5.3.11",
-    "@google/generative-ai": "^0.24.0",
-    "prop-types": "^15.8.1"
+    "tailwindcss": "^3.4.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
     "eslint": "8.56.0",
     "eslint-plugin-react": "7.34.0",
-    "eslint-config-next": "14.1.4"
-  },
-  "overrides": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "eslint-config-next": "14.1.4",
+    "@netlify/plugin-cache": "^1.0.0",
+    "@netlify/plugin-nextjs": "^4.34.0",
+    "@netlify/plugin-lighthouse": "^4.1.2"
   }
 }
