--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
-command = "npm install && npm run build"
-publish = ".next"
-
-[build.environment]
-NODE_VERSION = "18"
-NPM_FLAGS = "--legacy-peer-deps"
+  command = "npm install && npm run build"
+  publish = ".next"
 
 [[plugins]]
-package = "@netlify/plugin-cache"
+  package = "@netlify/plugin-nextjs"
+
+[[plugins]]
+  package = "@netlify/plugin-cache"
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
