--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18"
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/react": "^18.2.59",
+    "@types/node": "^20.11.27",
+    "typescript": "^5.4.5",
     "eslint": "8.56.0",
     "eslint-plugin-react": "7.34.0",
     "eslint-config-next": "14.1.4",
     "@netlify/plugin-nextjs": "^4.34.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
