--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm audit fix"
   },
   "dependencies": {
     "next": "14.1.4",
@@ -18,13 +19,13 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.59",
     "@types/node": "^20.11.27",
+    "@types/react": "^18.2.59",
     "typescript": "^5.4.5",
-    "eslint": "8.56.0",
-    "eslint-plugin-react": "7.34.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "14.1.4",
-    "@netlify/plugin-nextjs": "^4.34.0"
+    "eslint-plugin-react": "^7.34.0",
+    "@netlify/next": "^5.10.1"
   },
   "engines": {
     "node": ">=18.0.0"
