--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-react": "^7.34.0",
-    "@netlify/next": "^5.10.1"
+    "@netlify/next": "^5.10.0"  // Changed from ^5.10.1 to ^5.10.0
   },
   "engines": {
     "node": ">=18.0.0"
