--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "typescript": "^5.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
-    "eslint-plugin-react": "^7.34.0",
-    "@netlify/next": "^5.10.0"
+    "eslint-plugin-react": "^7.34.0"
   },
   "engines": {
     "node": ">=18.0.0"
