--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.26",  // Upgraded from 14.1.4
+    "next": "14.2.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.1",
@@ -22,7 +22,7 @@
     "@types/react": "^18.2.59",
     "typescript": "^5.4.5",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.26",  // Match Next.js version
+    "eslint-config-next": "14.2.26",
     "eslint-plugin-react": "^7.34.0"
   },
   "engines": {
