--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "@google/generative-ai": "^0.21.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
