--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
