--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sharp": "^0.33.2",
     "@google/generative-ai": "^0.21.0",
     "styled-components": "^6.1.13",
+    "critters": "^0.0.22",
     "compressorjs": "^1.2.1"
   },
   "devDependencies": {
